# psc-package

./: notes.org  psc-package.cabal  psc-package.dhall  stack.yaml
app/: D.hs  Main.hs  Types.hs
src/: D.hs  Package.hs  PackageConfig.hs  PackageSet.hs  PscPackage.hs
src/PscPackage/: Client.hs  Git.hs  Set.hs  \
