name:                psc-package
version:             0.3.2
synopsis:            An experimental package manager for PureScript
description:
homepage:            https://github.com/purescript/psc-package
license:             BSD3
license-file:        LICENSE
author:              Phil Freeman
maintainer:          paf31@cantab.net
copyright:           2017 Phil Freeman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    build-depends: base >=4 && <5,
                   aeson -any,
                   aeson-pretty -any,
                   async >= 2.1.1,
                   Glob,
                   bytestring -any,
                   mtl -any,
                   insert-ordered-containers -any,
                   containers -any,
                   foldl -any,
                   process -any,
                   system-filepath -any,
                   text -any,
                   purescript -any,
                   prettyprinter -any,
                   errors -any,
                   dhall -any,
                   turtle <1.6
    exposed-modules: PscPackage, PscPackage.Client, PscPackage.Git, Types, PackageSet, Package, PackageConfig, D
    other-modules: Paths_psc_package
    hs-source-dirs: src
    ghc-options: -Wall -O2
    default-language:    Haskell2010

executable psc-package
    build-depends: base >=4 && <5,
                   optparse-applicative -any,
                   turtle <1.6,
                   psc-package
    main-is: Main.hs
    other-modules: Paths_psc_package
    buildable: True
    hs-source-dirs: app
    ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
